# project2_Masenkova_Olesya_M25-555

./: .gitignore  README.md  demo.cast  pyproject.toml
src/: decorators.py
src/primitive_db/: constants.py  core.py  engine.py  main.py  parser.py  utils.py
