[tool.poetry]
name = "project2_Masenkova_Olesya_M25-555"
version = "0.1.0"
description = ""
authors = ["Olesya Masenkova <your.email@example.com>"]
readme = "README.md"

packages = [
    { include = "src" },
]

[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"
prettytable = "^3.12.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.0"

[tool.poetry.scripts]
project = "src.primitive_db.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = ["venv", ".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

